<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heroes Registry</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_heroes">Heroes Database</string>
    <string name="title_activity_info">Hero Details</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="label_name">Name:</string>
    <string name="text_name">DisplayNameHere</string>
    <string name="text_real_name">DisplayRealNameHere</string>
    <string name="label_real_name">Real Name:</string>
    <string name="label_universe">Universe:</string>
    <string name="text_universe">DisplayUniverseHere</string>
    <string name="label_history">Brief History:</string>
    <string name="text_history">This is where the history of the hero goes.</string>
    <string name="label_nemesis">Nemesis:</string>
    <string name="text_nemesis">DisplayNemesisHere</string>
    <string name="label_relatives">Relatives:</string>
    <string name="text_relatives">DisplayRelativesHere</string>
    <string name="label_accomplices">Accomplices:</string>
    <string name="text_accomplices">Accomplices displayed here</string>
    <string name="click_for_video">Click For Video</string>
    <string name="text_question">Question is displayed here</string>
    <string name="check_answer">Check Answer</string>

</resources>
